<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Phone_no"
        android:paddingTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#7C7474"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:textColorHint="#7C7474"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone_no"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8" />
   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/login_tt"
       android:layout_width="0dp"
       android:background="@drawable/button_bg"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintWidth_percent=".8"
       app:layout_constraintVertical_bias="0.7"
       android:textSize="16sp"
       android:textStyle="bold"
       android:text="@string/login"
       />
    <TextView
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/forgot_password"
        app:layout_constraintVertical_bias="0"
        app:flow_horizontalBias="1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:text="@string/or"
        app:layout_constraintVertical_bias="0"
        android:padding="5dp"
        android:fontFamily="@font/cabin"
        android:textColor="#7C7474"
        android:textSize="25sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>