<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunlight.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/login_page"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".70"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:background="@drawable/loginborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1"
        >


        <LinearLayout
            android:id="@+id/ll_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            >


            <androidx.appcompat.widget.AppCompatEditText

                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C7474"
                android:textSize="20sp"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintWidth_percent="0.8" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C7474"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#7C7474"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/signup"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/or_sign_up_using"
                android:textColor="#7C7474"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn"


                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_tab"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/black"
            app:layout_constraintRight_toLeftOf="@id/signup_tab"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:background="@drawable/loginborder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_page"
            app:layout_constraintWidth_percent=".5"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_tab"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:background="@drawable/loginborder"
            android:text="@string/signup"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/login_tab"
            app:layout_constraintTop_toTopOf="@id/login_page"
            app:layout_constraintWidth_percent=".5" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/sunlightlogo2"
        android:src="@drawable/peace2"
        app:layout_constraintBottom_toTopOf="@id/login_page"
        />
    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunlight"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_page"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>