<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunlight.CardHappy">

    <ImageView
        android:src="@drawable/sad2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout_cardhappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="10dp"
        />
    <TextView
        android:textColor="#0D3DCD"
        android:id="@+id/tv_heythere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text=" Hey There!! "
        android:layout_marginTop="5dp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        android:textSize="40sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_whtwnttotry"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/like_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_heythere"
        android:text="@string/what_do_you_want_to_try"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    <ImageView
        android:id="@+id/like_btn"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:src="@drawable/like2"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_whtwnttotry"
        app:layout_constraintBottom_toTopOf="@id/ll_moods"

        />

    <LinearLayout

        android:id="@+id/ll_moods"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_whtwnttotry"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="100dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/music_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardMaxElevation="15dp"
            app:cardPreventCornerOverlap="true"
            android:backgroundTint="@color/Happy">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:layout_marginStart="200dp"
                android:fontFamily="@font/cabin"
                android:padding="12dp"
                android:text="@string/music"
                android:textColor="@color/black"
                android:textSize="30sp" />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardMaxElevation="15dp"
            app:cardPreventCornerOverlap="true"
            android:backgroundTint="#9F8F8F">




                <ImageView
                    android:id="@+id/vid_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="240dp"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/movie" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:layout_marginStart="140dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cabin"
                android:padding="12dp"
                android:text="@string/movies"
                android:textColor="@color/black"
                android:textSize="30sp" />




        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_tired"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardMaxElevation="15dp"
            app:cardPreventCornerOverlap="true"
            android:backgroundTint="@color/Happy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/tired2"
                android:scaleType="centerCrop"
                />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="240dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/lol"

                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:fontFamily="@font/cabin"
                android:padding="12dp"
                android:text="@string/chill"
                android:textColor="@color/black"
                android:textSize="30sp" />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/game_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardMaxElevation="15dp"
            app:cardPreventCornerOverlap="true"
            android:backgroundTint="@color/Happy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/red" />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="200dp"
                    android:padding="5dp"
                    android:src="@drawable/anger2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/cabin"
                android:gravity="end"
                android:padding="12dp"
                android:layout_gravity="end"
                android:text="@string/game"
                android:textColor="@color/black"
                android:textSize="30sp" />



        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>